# mobilitas

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
assets/: index-0612eff1.js  index-08441825.js  index-136f9e1b.css  index-14fb242c.css  index-1f21fe98.js  index-2e565918.js  index-331f2805.js  index-356c03fa.js  index-4c5e2d59.css  index-6508ed77.js  index-7c34023b.css  index-8c369292.js  index-8f7339ec.js  index-94546ecc.js  index-9a469b31.js  index-9cfbdf95.js  index-ab9dc0d7.js  index-b9a0de53.js  index-bf53d1eb.js  index-c0099b8c.js  index-c0da04da.js  index-c78f756a.js  index-cb3724f8.css  index-d14276df.css  index-d3a7b215.js  index-d49108d6.js  index-d733e167.css  index-dc3a5c48.js  index-e9e0db4d.js
back-end/: .gitignore  algorithm.cpp  main.py  pyproject.toml
back-end/files/: chosenPath.json  generalGraph.json  semaphoresData.json  sol.json
front-end/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
front-end/src/: App.tsx  index.css
front-end/src/components/BarChart/: BarChart.tsx
front-end/src/components/Card/: Card.tsx
front-end/src/components/SidebarItem/: SidebarItem.tsx
front-end/src/pages/: Home.tsx  Simulation.tsx
src/: index.css  main.tsx  router.tsx  routes.tsx
src/components/BarChart/: BarChart.tsx
src/components/DefaultPage/: DefaultPage.tsx
src/components/SemaphoresMap/: SemaphoresMap.tsx
src/components/Sidebar/: Sidebar.tsx
src/pages/: Home.tsx  Metrics.tsx  Simulation.tsx
src/pages/Home/: Home.tsx
src/pages/Metrics/: Metrics.tsx
(+1 files in other folders)
